<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reclaim Philly</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_map">Reclaim Philly</string>
    <string name="title_activity_property_details">Property Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_single_fragment">SingleFragmentActivity</string>
    <string name="report_location">Report</string>
    <string name="view_location">View</string>
    <string name="property_street_address_hint">Enter a Street Address</string>
    <string name="take" >Take</string>

    <string name="property_lot_type_lot_title_radio_bttn">Lot</string>
    <string name="property_lot_type_res_title_radio_bttn">Residential</string>
    <string name="property_lot_type_nrs_title_radio_bttn">Non-Residential</string>
    <string name="property_description_hint">Enter a short description</string>

    <string name="search_hint">Search Address</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="property_property_submit_bttn">Submit Report</string>
</resources>
